--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿-r requirements.txtcertifi==2025.10.5
+﻿requirements.txtcertifi==2025.10.5
 charset-normalizer==3.4.4
 colorama==0.4.6
 idna==3.11
@@ -9,4 +9,5 @@ Pygments==2.19.2
 pytest==8.4.2
 requests==2.32.5
 urllib3==2.5.0
+
 
